# DCode

./: CMakeLists.txt  Dynamic_config.h  PHY_action.h  ack_buffer.cpp  ack_buffer.h  adaptation.cpp  adaptation.h  adaptive_parameters.h  camera_fetcher_Android.cpp  camera_fetcher_Android.h  config.h  datalink.h  frame_painter.h  locator_scanner.cpp  locator_scanner.h  main.cpp  modulator.cpp  modulator.h  packet.cpp  packet.h  palette.h  pattern_matcher.h  physical.h  physical_Android.cpp  pixel_reader_Android.h  rx_buffer.cpp  rx_buffer.h  screen_fetcher_Android.cpp  screen_fetcher_Android.h  screen_painter_Android.cpp  screen_painter_Android.h  segment_pool.h  structures.h  symbol_scanner.cpp  symbol_scanner.h  tx_buffer.cpp  tx_buffer.h
test/: main.cpp  physical_test.cpp  physical_test.h  utils_test.cpp  utils_test.h
utils/: RGB.h  TD_tree.h  blocking_queue.h  blocking_set.h  constants.h  escape_fsm.h  escaper.h  hamming128.h  reed_solomon_code.cpp  reed_solomon_code.h  semaphore.h  utils.h
